--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ html {
 }
 body{
     margin: 0px auto;
-    max-width: 1000px;
+    max-width: 500px;
+    background-color: beige;
 }
 h1{
     margin: 0;
